Name:                ROS-std-srvs-msgs
Version:             0.4
Synopsis:            ROS Messages from std_srvs
Cabal-version:       >=1.6
Category:            Robotics
Build-type:          Simple

Library
  Exposed-Modules: Ros.Std_srvs.EmptyRequest
                   Ros.Std_srvs.EmptyResponse
                   Ros.Std_srvs.SetBoolRequest
                   Ros.Std_srvs.SetBoolResponse
                   Ros.Std_srvs.TriggerRequest
                   Ros.Std_srvs.TriggerResponse

  Build-Depends:   base >= 4.2 && < 6,
                   vector > 0.7,
                   time >= 1.1,
                   data-default-generics >= 0.3,
                   lens-family-core >= 1.2,
                   lens-family-th >= 0.4.1,
                   roshask == 0.4.*,
                   ROS-std-msgs
  GHC-Options:     -O2